# Hong-Kong-stocks

./: .env.example  .gitignore  README.md  extract_prospectus.py  pyproject.toml  requirements.txt
Hong-Kong-stocks/config/: config.yaml
Hong-Kong-stocks/data/: daily_ipo_summary.csv
Hong-Kong-stocks/outputs/: prospectus_extraction.json
Hong-Kong-stocks/skills/allocation-probability/: run.py
Hong-Kong-stocks/tests/: test_pipeline.py  test_reporting.py  test_scoring.py
data/: chief_all_details.json  chief_ipo_page.html  chief_ipos.json  daily_ipo_summary.csv  historical_ipos.db  manual_override.csv  verified_2026-07-01_enriched.json  verified_current_ipos_2026-06-30.json  verified_current_ipos_2026-06-30_futu.json
docs/: data-sources.md  scoring.md
examples/: sample_ipo.json
outputs/: prospectus_extraction_results.json
reports/: 2026-06-30_hk_ipo_report.html  2026-06-30_hk_ipo_report.md  2026-07-01_hk_ipo_report.html  2026-07-01_hk_ipo_report.md
skills/allocation-probability/: SKILL.md  run.py
skills/grey-market-analyzer/: SKILL.md
skills/ipo-analyzer/: SKILL.md  run.py
skills/ipo-scoring/: SKILL.md
skills/listing-day-strategy/: SKILL.md
skills/subscription-heat-analyzer/: SKILL.md  run.py
skills/valuation-analyzer/: run.py
src/hk_ipo_analyzer/: __init__.py  cache_layer.py  cli.py  logging_config.py  models.py  pipeline.py  reporting.py  storage.py
tests/: test_enrichment_parsers.py  test_evidence_resolution.py  test_hkex_fetcher.py  test_pipeline.py  test_reporting.py
tests/fixtures/: hkex_listing.html
(+53 files in other folders)
