[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-ipo-analyzer"
version = "0.1.0"
description = "港股新股打新每日分析系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3",
  "beautifulsoup4>=4.12,<5",
  "pandas>=2.1,<3",
  "PyYAML>=6,<7",
  "pdfplumber>=0.11,<1",
  "PyMuPDF>=1.24,<2",
  "APScheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<6", "ruff>=0.5,<1"]
browser = ["playwright>=1.45,<2"]

[project.scripts]
hk-ipo = "hk_ipo_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

